--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <div class="overlay1"></div>
 
     <div class="container">
+        <div class="overlay2">
+            <h2>Congratulations! You Won!</h2>
+            <p>
+                With <span class="move_Count"> 0 </span> Moves and <span class="numOfStars"> 0 </span> Stars!
+            </p>
+            <p>
+                Time used: <span class="playTime">0</span> sec !!!!
+            </p>
+            <p>Woooooo!</p>
+            <button class="playAgain" type="button">Play again!</button>
+        </div>
+
         <header>
             <h1>Matching Game</h1>
         </header>
