fixed star showing problem changed star score calculation restrict the click event when the previous event is wrong card

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <div class="overlay1"></div>
+    <div class="finishGameBkg_Overlay"></div>
 
     <div class="container">
-        <div class="overlay2">
+        <div class="finishGameMsg_Overlay">
             <h2>Congratulations! You Won!</h2>
             <p>
                 With <span class="move_Count"> 0 </span> Moves and <span class="numOfStars"> 0 </span> Stars!
@@ -30,9 +30,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star-o"></i></li>
+        		<li><i class="fa fa-star-o"></i></li>
+        		<li><i class="fa fa-star-o"></i></li>
         	</ul>
 
         	<span class="moves">3</span> Moves
